--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -29,7 +29,8 @@
                                 <div class="card__actions">
                                     <a href="/products/<%= product._id %>" class="btn">Details</a>
                                     <form action="/add-to-cart" method="POST">
-                                        <button class="btn">Add to Cart</button>
+                                        <button class="btn" type="submit">Add to Cart</button>
+                                        <input type="hidden" name="productId" value="<%= product.id %>">
                                     </form>
                                 </div>
                             </article>
