--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -22,7 +22,8 @@
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">Add to Cart</button>
+                            <%# Include the reusable add-to-cart button partial %>
+                            <%- include('../includes/add-to-cart.ejs') %>
                         </div>
                     </article>
                 <% } %>
