--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -28,10 +28,8 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/products/<%= product._id %>" class="btn">Details</a>
-                                    <form action="/add-to-cart" method="POST">
-                                        <button class="btn" type="submit">Add to Cart</button>
-                                        <input type="hidden" name="productId" value="<%= product.id %>">
-                                    </form>
+                                    <%# Include the reusable add-to-cart button partial, passing the product object as local variable %>
+                                    <%- include('../includes/add-to-cart.ejs', { product: product }) %>
                                 </div>
                             </article>
                             <% } %>
