--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -23,7 +23,7 @@
                         </div>
                         <div class="card__actions">
                             <%# Include the reusable add-to-cart button partial %>
-                            <%- include('../includes/add-to-cart.ejs') %>
+                            <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                         </div>
                     </article>
                 <% } %>
