--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -27,7 +27,8 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product" class="btn">Edit</a>
+                                    <!-- Link to the edit page for this product, passing the product ID as a URL parameter and setting edit=true to indicate edit mode -->
+                                    <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
