--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -25,6 +25,9 @@
                 <label for="description">Description</label>
                 <textarea name="description" id="description" rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
             </div>
+            <% if (editing) { %>
+                <input type="hidden" value="<%= product.id %>" name="productId">
+            <% } %>
 
             <!-- Display "Update Product" if in edit mode, otherwise "Add Product" -->
             <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<% } %></button>
