--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -30,6 +30,7 @@
                                     <!-- Link to the edit page for this product, passing the product ID as a URL parameter and setting edit=true to indicate edit mode -->
                                     <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
+                                        <input type="hidden" value="<%= product.id %>" name="productId">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
 
